style.css
.topnav {
    background-color: slategray;
    display: flex;
}
.topnav h4 {
    font-size: 24px;
    color: lightgray;
    flex: 1;
    justify-self: flex-start;
    align-self: flex-start;
}
.topnav a {
    color: lightgrey;
    font-size: 18px;
    flex: 1;
    
}
.two {
    background-color: slategray;
    display: flex;
    flex-direction: column;
}
.header {
    font-size: 48px;
    color: lightgray;
    align-self: flex-start;
    flex: 1;
}
.two p {
    font-size: 18px;
    color: lightgray;
    flex: 1;
}
.image {
    flex: 1;
    align-self: center;
    margin: 8px;
}
.three {
    display: flex;
    flex-wrap: wrap;
}
.three h2 {
    font-size: 36px;
    font-weight: 800;
    flex: 1;
}

